--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
     font-size: 0.9rem;
 }
 .smallest-font{
-    font-size: 0.6rem;
+    font-size: 0.7rem;
 }
 .f-size{
     font-size: 1.2rem;
@@ -143,7 +143,7 @@
     background-image: linear-gradient(to bottom, rgba(216, 94, 75, 0.87), rgba(216, 94, 75, 0.82)), url(images/buy-property-turkey.jpg);
     background-size: cover;
     background-position: center;
-    height: 18rem;
+    height: 21rem;
 }
 .line-h ul li{
     height: 10vh;
@@ -157,7 +157,7 @@
 }
 .map{
     background-image: url(images/map.png);
-    padding-top: 25vh;
+    padding-top: 50vh;
 }
 .directions-col{
     color: #d35649;
@@ -185,7 +185,7 @@
     box-shadow:2px 5px#d2dae2
 }
 .card-width{
-    width: 60vw;
+    width: 70vw;
 }
 .col-wdth{
     width: 56vw;
@@ -193,6 +193,13 @@
 .card-image-cap{
     background-image: url(images/istanbul-city-apartments.jpg);
     padding-top: 50vh;
+    
+}
+.btn-height{
+    height: 2.5rem
+}
+.btn-mg-top{
+    margin-top: 4%;
 }
 
 @media (min-width: 576px) {
@@ -232,7 +239,7 @@
     padding-right: 0;
 }
 .max-wdth{
-    max-width: 36rem;
+    max-width: 31rem;
 }
 .ft-sz{
     font-size: 1rem;
@@ -244,6 +251,16 @@
 .card-width{
     width: 80vw;
     height: 55vh
+}
+.btn-mg-top {
+    margin-top: 8%;
+}
+.btn-height {
+    height: 2.2rem;
+    width: 4.6rem;
+}
+.max-wdth-card {
+    max-width: 29rem;
 }
 
 }
@@ -268,4 +285,33 @@
 .map{
     padding-top: 70vh;
 }
+.card-width {
+    width: 64vw;
+    height: 56vh;
+}
+.max-wdth-card {
+    max-width: 35rem;
+}
+.bck-house-img {
+    height: 22rem;
+}
+.max-wdth {
+    max-width: 60rem;
+}
+.ft-card-mx-width {
+    max-width: 30rem;
+}
+.f-size{
+    font-size: 2rem;
+}
+.p-ft-size{
+    font-size: 1.2;
+}
+.smaller-font{
+    font-size: 1.2rem;
+}
+.btn-mg-top {
+    margin-top: 4%;
+}
+
 }
