--- a/style.css
+++ b/style.css
@@ -250,7 +250,10 @@
 }
 
 .btn-mg-top {
-  margin-top: 4%;
+    margin: 4% auto;
+}
+.p-1{
+    padding: 1%;
 }
 
 
@@ -298,7 +301,7 @@
   }
 
   .max-wdth {
-    max-width: 31rem;
+    max-width: 30rem;
   }
 
   .ft-sz {
@@ -316,12 +319,12 @@
   }
 
   .btn-mg-top {
-    margin-top: 7%;
+    margin-top: 6.9%;
   }
 
   .btn-height {
-    height: 2.2rem;
-    width: 4.6rem;
+    height: 2.3rem;
+    width: 5rem;
   }
 
   .max-wdth-card {
@@ -330,6 +333,12 @@
   .container-mrg-l{
     margin-left: 2%;
     margin-right: 2%;
+}
+.container-fluid {
+    margin-right: 23%;
+}
+.centering-elem{
+    margin: 0 auto;
 }
   
 }
