adding live demo link and adding screenshot image to README file

--- a/style.css
+++ b/style.css
@@ -27,6 +27,9 @@
 .f-size-icons {
   font-size: 1.2rem;
 }
+.fnt-size-mobsize{
+    font-size: 1.5rem;
+}
 
 .bck-color {
   background-color: #d35649;
